New-Upload-1755854042013/objects/Profiles__c.object
<CustomObject>
    <fields>
        <fullName>Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Permission_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field Permission Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Permission_Field__c</fullName>
        <label>Field Permission Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Permission_Readable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field Permission Readable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Permission_AllowCreate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Object Permission Allow Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Permission_AllowDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Object Permission Allow Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Permission_AllowEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Object Permission Allow Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Permission_AllowRead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Object Permission Allow Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Permission_ModifyAllRecords__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Object Permission Modify All Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Permission_Object__c</fullName>
        <label>Object Permission Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Permission_ViewAllFields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Object Permission View All Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Permission_ViewAllRecords__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Object Permission View All Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tab_Visibility_Tab__c</fullName>
        <label>Tab Visibility Tab</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tab_Visibility_Visibility__c</fullName>
        <label>Tab Visibility Visibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag_Types__c</fullName>
        <label>Tag Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>fieldPermissions</fullName>
                </value>
                <value>
                    <fullName>objectPermissions</fullName>
                </value>
                <value>
                    <fullName>tabVisibilities</fullName>
                </value>
                <value>
                    <fullName>userPermissions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_License__c</fullName>
        <label>User License</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Permission_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Permission Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Permission_Name__c</fullName>
        <label>User Permission Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Profiles</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Profiles-{0000}</displayFormat>
        <label>Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>